--- a/2_SEM/Aula2/src/pages/home/index.css
+++ b/2_SEM/Aula2/src/pages/home/index.css
@@ -1,11 +1,15 @@
-@import url("fonts.css");
+@import url("../../../public/css/global.css");
+@import url("../../../public/css/nav.css");
+
+
 *{
     margin: 0;
     padding: 0;
 }
+
 main{
     display: flex;
-    justify-content: center;
+	flex-direction: column;
     align-items: center;
     width: 100vw;
     height: 100vh;
@@ -13,17 +17,19 @@ main{
 }
 
 .title{
-    font-size: 1.5rem;
+    font-size: 1.65rem;
+	font-weight: bolder;
 }
 
 .container{
-    width: 80%;   
+    width: 76%;   
 }
 
 .box-header{
     display: flex;
     justify-content: space-between;
     align-items: center;
+	margin-top: 20px;
 }
 
 .links{
@@ -48,7 +54,7 @@ main{
 
 .grid-photos{
     display: grid;
-    grid-template-rows: 240px 240px;
+    grid-template-rows: 280px 280px;
     grid-template-columns: 1fr 1fr 1fr 1fr; 
     margin-top: 20px;
     gap: 7px;
@@ -56,27 +62,42 @@ main{
 
 .grid-photos div{
     width: 100%;
-    height: 100%;;
+    height: 100%;
+	background-color: black;
 }
 
 .grid-photos img{
     width: 100%;
     height: 100%;
     object-fit: cover;
+	cursor: pointer;
+}
+
+.grid-photos img:hover{
+	opacity: 90%;
 }
 
 .img1{
     grid-row: span 2;
     grid-column: span 2; 
+	border-radius: 15px 0 0 15px;
 }
 
 .img1 img{
-    border-radius: 10px 0 0 10px;
+    border-radius: 15px 0 0 15px;
+}
+
+.img3{
+	border-radius: 0 15px 0 0;
 }
 
 .img3 img{
-    border-radius: 0 10px 0 0;
+	border-radius: 0 15px 0 0;
+}
+
+.img5{
+	border-radius: 0 0 15px 0;
 }
 .img5 img{
-    border-radius: 0 0 10px 0;
+    border-radius: 0 0 15px 0;
 }
