--- a/2_SEM/Aula2/public/css/nav.css
+++ b/2_SEM/Aula2/public/css/nav.css
@@ -31,8 +31,10 @@
     display: flex;
     align-items: center;
     background-color: transparent;
-    padding: 24px;
+    padding: 15px;
     gap: 20px;
+    box-shadow: #DDDDDD 1px 1px 0px 1px;
+    border-radius: 20px;
 }
 
 .middle-button{
