--- a/2_SEM/Aula2/public/css/room-info.css
+++ b/2_SEM/Aula2/public/css/room-info.css
@@ -8,6 +8,7 @@
 
 .room-info{
     display: flex;
+    
 }
 
 .info-box{
@@ -26,7 +27,7 @@
 
 .room-item{
     list-style: none;
-    font-size: 15.6px;
+    font-size: 14px;
 }
 
 .title-items{
@@ -57,8 +58,8 @@
 .host-info{
     width: 87%;
     padding: 20px 0;
-    border-bottom: var(--cinza-menu) solid 2px;
-    border-top: var(--cinza-menu) solid 2px;
+    border-bottom: var(--cinza-ddd) solid 1px;
+    border-top: var(--cinza-ddd) solid 1px;
     display: flex;
     align-items: center;
     gap: 20px;
@@ -84,6 +85,11 @@
 
 .benefits{
     margin-left: 10px;
+}
+
+.benefits:last-child{
+    border-bottom: solid 1px var(--cinza-ddd);
+    padding-bottom: 10px;
 }
 
 .benefit{
@@ -116,7 +122,7 @@
 
 .benefit-details p{
     color: rgb(121, 121, 121);
-    font-size: 15px;
+    font-size: 14px;
 }
 
 
