--- a/2_SEM/Aula2/public/css/room-info.css
+++ b/2_SEM/Aula2/public/css/room-info.css
@@ -15,8 +15,8 @@
     width: 66.666%;
 }
 
-.booking-box{
-    width: 33.333%;
+.info{
+    width: 87%;
 }
 
 .info h1{
@@ -56,7 +56,6 @@
 }
 
 .host-info{
-    width: 87%;
     padding: 20px 0;
     border-bottom: var(--cinza-ddd) solid 1px;
     border-top: var(--cinza-ddd) solid 1px;
@@ -125,4 +124,68 @@
     font-size: 14px;
 }
 
+.booking-info{
+    width: 33.333%;
+}
 
+.booking-box{
+    width: 100%;
+    height: fit-content;
+    border: var(--cinza-ddd) 1px solid;
+    box-shadow: 0 0 10px var(--cinza-ddd); 
+    border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.booking-text{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    row-gap: 5px;
+    padding: 30px 0;
+}
+
+.booking-text h1{
+    font-size: 1.35rem;
+    font-weight: 500;
+}
+
+.booking-btn{
+    width: 85%;
+    height: 48px;
+    background-image: linear-gradient(45deg, #e61e4d, #d80566);
+    color: white;
+    font-family: AirbnbFont;
+    font-size: 1rem;
+    border-radius: 10px;
+    border: none;
+    margin-bottom: 30px;
+    cursor: pointer;
+}
+
+.translation{
+    width: 87%;
+    padding-top: 32px;
+}
+
+.translation p{
+    padding: 16px;
+    background-color: var(--cinza-menu);
+    font-weight: 300;
+    border-radius: 10px;
+}
+
+.translation p a{
+    color: black;
+}
+
+.room-description{
+    width: 87%;
+}
+
+.paragraph{
+    line-height: 1.6rem;
+    padding-top: 30px;
+}
