--- a/2_SEM/Aula2/public/css/nav.css
+++ b/2_SEM/Aula2/public/css/nav.css
@@ -40,7 +40,7 @@
     border: var(--cinza-ddd) 1px solid;
     box-shadow: 1px 1px 2px 1px var(--cinza-ddd); 
     border-radius: 30px;
-    padding: 8px 15px;
+    padding: 8px 5px 8px 15px;
     transition: all 0.3s;
 }
 
@@ -61,7 +61,7 @@
     cursor: pointer;
     font-weight: bolder;
     font-family: AirbnbFont_Lt;    
-    padding: 0 10px;
+    padding: 0 15px;
     font-weight: bold;
     padding: 4px 12px;
 }
