--- a/2_SEM/Aula2/src/pages/home/index.css
+++ b/2_SEM/Aula2/src/pages/home/index.css
@@ -1,6 +1,7 @@
 @import url("../../../public/css/global.css");
 @import url("../../../public/css/nav.css");
 @import url("../../../public/css/room-info.css");
+@import url("../../../public/css/maps.css");
 
 *{
     margin: 0;
@@ -12,7 +13,6 @@ main{
 	flex-direction: column;
     align-items: center;
     width: 100vw;
-    height: 100vh;
 }
 
 .title{
@@ -108,6 +108,12 @@ main{
 @media  screen and (min-width: 1800px){
     .container{
         width: var(--margem-responsivo-1800);
+    }
+}
+
+@media screen and (max-width: 1400px){
+    .container{
+        width: var(--margem-responsivo-1400);  
     }
 }
 
