Section maps finished and section iconic started

--- a/2_SEM/Aula2/public/css/global.css
+++ b/2_SEM/Aula2/public/css/global.css
@@ -17,6 +17,8 @@ body{
     --cinza-user: #6a6a6a;
     --cinza-menu: #f0f0f0;
     --cinza-ddd: #dddddd;
+    --font-color: #222222;
+
 
     --margem-responsivo-1280: 86%;
     --margem-responsivo-1800: 60%;
