--- a/2_SEM/Aula2/public/css/nav.css
+++ b/2_SEM/Aula2/public/css/nav.css
@@ -11,6 +11,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    max-width: 1120px;
 }
 
 .logo-box svg{
@@ -123,15 +124,15 @@
     background-color: #efededb8;
 }
 
-@media screen and (min-width: 1800px){
+@media screen and (min-width: 1550px){
     .nav-box{
         width: var(--margem-responsivo-1800);
     }
 }
 
-@media screen and (max-width: 1280px){
+@media screen and (max-width: 1550px){
     .nav-box{
-        width: var(--margem-responsivo-1280);
+        width: var(--margem-responsivo-1280); 
     }
 
     .user-preferences{
