section booking_requirements started

--- a/2_SEM/Aula2/src/pages/home/index.css
+++ b/2_SEM/Aula2/src/pages/home/index.css
@@ -3,6 +3,7 @@
 @import url("../../../public/css/room-info.css");
 @import url("../../../public/css/maps.css");
 @import url("../../../public/css/iconic.css");
+@import url("../../../public/css/booking.css");
 
 *{
     margin: 0;
