--- a/2_SEM/Aula2/public/css/iconic.css
+++ b/2_SEM/Aula2/public/css/iconic.css
@@ -15,15 +15,20 @@
     width: 50%;
     display: flex;
     flex-direction: column;
-    gap: 15px;
     align-items: center;
 }
 
 .iconic-text h1{
     font-size: 6rem;
+    margin-top: -20px;
 }
 
 .iconic-text p{
     font-size: 1.3rem;
     text-align: center;
+}
+
+.down{
+    border-bottom: var(--cinza-ddd) solid 1px;
+    padding-bottom: 50px;
 }
