--- a/2_SEM/Aula2/src/pages/home/index.css
+++ b/2_SEM/Aula2/src/pages/home/index.css
@@ -4,6 +4,7 @@
 @import url("../../../public/css/maps.css");
 @import url("../../../public/css/iconic.css");
 @import url("../../../public/css/booking.css");
+@import url("../../../public/css/footer.css");
 
 *{
     margin: 0;
