--- a/2_SEM/Aula2/public/css/global.css
+++ b/2_SEM/Aula2/public/css/global.css
@@ -9,9 +9,17 @@ body{
     overflow-x: hidden;
 }
 
-::-webkit-scrollbar {
-    visibility: hidden;
+section{
+    display: flex;
+	flex-direction: column;
+    align-items: center;
+    width: 100vw;
 }
+
+/* ::-webkit-scrollbar {
+    display: none;
+} */
+
 :root{
     --vermelho-airbnb: #ff385c;
     --cinza-user: #6a6a6a;
