--- a/2_SEM/Aula2/public/css/room-info.css
+++ b/2_SEM/Aula2/public/css/room-info.css
@@ -8,7 +8,6 @@
 
 .room-info{
     display: flex;
-    
 }
 
 .info-box{
@@ -279,4 +278,22 @@
 
 .bedroom-text p{
     font-weight: 100;
+}
+
+@media screen and (max-width: 860px) {
+    .room-info{
+        padding: 0;
+    }
+
+    .info-box{
+        width: 100%;
+    }
+
+    .info{
+        width: 100%;
+    }
+
+    .title-info{
+        font-size: 0.6rem;
+    }
 }
