--- a/2_SEM/Aula2/public/css/nav.css
+++ b/2_SEM/Aula2/public/css/nav.css
@@ -1,3 +1,43 @@
+.responsive-nav{
+    display: none;
+    justify-content: space-between;
+    height: 64px;
+    align-items: center;
+    width: 100%;    
+}
+
+.responsive-nav div{
+    padding: 0 24px;
+}
+
+.back{
+    display: flex;
+    font-family: Airbnbfont;
+    align-items: center;
+    gap: 15px;
+    font-weight: bold;
+    color: var(--font-color);
+    font-size: 0.88rem;
+}
+
+.like-share{
+    display: flex;
+    gap: 10px;
+}
+
+.like-share button{
+    width: 32px;
+    height: 32px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: transparent;
+    border: none;
+}
+
+
+
+
 .nav{
     width:100%;
     box-shadow: var(--cinza-menu) 1px 1px 0;
@@ -173,5 +213,11 @@
 
     .search-bar-min-link{
         display: block;
+    }
+}
+
+@media screen and (max-width: 860px){
+    .responsive-nav{
+        display: flex;
     }
 }
